get DB setup... well now it just fatals

--- a/TheWorld/config.json
+++ b/TheWorld/config.json
@@ -1,5 +1,8 @@
 {
     "MailSettings": {
         "ToAddress" : "coolguy@cool.com"
+    },
+    "ConnectionStrings" : {
+        "WorldContextConnection" : "Server=127.0.0.1;user id=root;Database=TheWorldDb;MultipleActiveResultSets=true;"
     }
 }
