--- a/TheWorld/TheWorld.csproj
+++ b/TheWorld/TheWorld.csproj
@@ -12,5 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="*"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.0"/>
   </ItemGroup>
 </Project>
