--- a/TheWorld/TheWorld.csproj
+++ b/TheWorld/TheWorld.csproj
@@ -1,18 +1,22 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="wwwroot\"/>
-    <Folder Include="Views\Shared\"/>
+    <Folder Include="wwwroot\" />
+    <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="*"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.0"/>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0" PrivateAssets="All" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0" />
   </ItemGroup>
 </Project>
